# openFrameworks

./: CMakeLists.txt  conanfile.txt
addons/ofxAssimpModelLoader/: CMakeLists.txt
addons/ofxOpenCv/: CMakeLists.txt
addons/ofxSvg/: CMakeLists.txt
cmake/: conan.cmake  utils.cmake
libs/openFrameworks/: CMakeLists.txt
